# QFpp

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Complete_run_guppy.sh  Complete_run_qiskit.sh  Dockerfile  README.md  ci_pipeline.py  lex.h  main.py  params.py  pyproject.toml  setup.sh  test  test.cpp  test.py  utils.py
.github/workflows/: ci.yml  container_build.yml  nightly.yml
config/: tokens.yaml
dev/: notes.md
diff_testing/: cirq.py  cudaq.py  cudaq_qf.py  guppy.py  lib.py  pennylane.py  pytket.py  qasm.py  qiskit.py  wisq.py
docs/: architecture.md  dev.md  diff-testing.md  ethos.md  grammar.md  map-elites.md  writing-grammars.md
grammar_definitions/: cirq.qf  cudaq.qf  cudaq_py.qf  guppy.qf  meta-grammar.qf  pennylane.qf  pytket.qf  qasm.qf  qiskit.qf  tb.qf  test.qf
grammar_definitions/todo/: cirq.qf  guppy.qf
include/: generator.h  genome.h  run.h  run_utils.h
include/ast/: ast.h  ast_utils.h  context.h
include/ast/node/: block.h  branch_constraint.h  circuit.h  clone_mixin.h  compare_op_bitwise_or_pair_child.h  compound_stmt.h  compound_stmts.h  conjunction.h  disjunction.h  expression.h  float_list.h  float_literal.h  gate.h  gate_name.h  gate_op_args.h  integer.h  nested_branch.h  nested_stmt.h  node.h  node_constraints.h  parameter_def.h  qubit_op.h  register_resource.h  register_resource_definition.h  resource.h  resource_definition.h  resource_defs.h  resource_list.h  singular_resource.h  singular_resource_definition.h  subroutine_defs.h  variable.h
include/ast/node/helper_nodes/: child_indent.h  indent.h  indent_level.h  line_indent.h  self_indent.h
include/ast/node/special_child_nodes/: compare_op_bitwise_or_pair_child.h
include/ast/node/special_nodes/: circuit.h  compound_stmt.h  compound_stmts.h  conjunction.h  disjunction.h  (+22 more)
include/ast/utils/: ast_features.h  ast_stats.h  ast_utils.h  info.h  node_gen.h  register_resource.h  register_resource_def.h  resource_kind.h  singular_resource.h  singular_resource_def.h
include/dag/: dag.h  genome.h
include/generator/: arbiter.h  archive.h  cell.h  generator.h  mutate.h  mutation_selector.h  pass.h
include/grammar/: branch.h  expr.h  grammar.h  lex.h  qf_term.h  rule.h  rule_utils.h  term.h  term_constraint.h
include/utils/: coll.h  collection.h  params.h  supported_gates.h  utils.h
llm_generator/: aggregate_circuits.py  circuit_assembler.py  coverage_analyzer.py  fixing_prompt_template.txt  generate_plots_from_logs.py  generation_prompt.txt  generator.py  generic_generator.py  guppy_generator.py  llm_generator.py  mutate_prompt_template.txt  test_existing_circuits.py
llm_generator/Guppy_prompt_templates/: generation_prompt.txt
llm_generator/LLM_prompt_templates/: generation_prompt.txt
llm_generator/Qiskit_prompt_templates/: fixing_prompt_template.txt  generation_prompt.txt
llm_generator/configs/: guppy_full_run_config.yaml  qiskit_full_run_config.yaml
llm_generator/lib/: ast_ops.py  circuit_assembler.py  execution.py  llm_client.py  utils.py
scripts/: ci_pipeline.py  circuit_assembler.py  cov_collect.py  docker_build.sh  docker_run.sh  experiments.py  lint.sh  manual_nightly_run.sh  plot_map_elites.py  qf.py  run.py  setup.py  tket_coverage_report.sh  tket_coverage_reset.sh  utils.py
scripts/docker/: build.sh  run.sh
scripts/setup/: setup_build.sh  setup_deps.sh  setup_docker.sh  setup_env.sh
scripts/visualise/: plot_coverage.py
src/: generator.cpp  main.cpp  run.cpp
src/ast/: ast.cpp  context.cpp
src/ast/node/: block.cpp  circuit.cpp  gate.cpp  node.cpp  qubit.cpp  qubit_op.cpp  resource.cpp  subroutine_op_arg.cpp
src/ast/utils/: ast_stats.cpp  ast_utils.cpp  coll.cpp  features.cpp  info.cpp  quality.cpp  supported_gates.cpp
src/dag/: dag.cpp
src/generator/: arbiter.cpp  archive.cpp  generator.cpp  mutate.cpp  mutate_preserving.cpp  pass.cpp
src/grammar/: branch.cpp  expr.cpp  grammar.cpp  lex.cpp  rule.cpp  term.cpp
src/qutefuzz.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/utils/: utils.cpp
templates/: cirq.qf  common.qf  cudaq.qf  guppy.qf  lex.h.j2  pennylane.qf  pytket.qf  qasm2.qf  qasm3.qf  qiskit.qf
(+6 files in other folders)
