[project]
name = "qutefuzz"
version = "1.0.0"
description = "Fuzzing framework for quantum compilers"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "conan",
    "pytket",
    "qiskit",
    "pytket-qiskit",
    "matplotlib",
    "sympy",
    "z3-solver",
    "cirq",
    "pytket-qir",
    "qnexus",
    "pennylane",
    "cuda-quantum-cu12",
    "umap-learn",
    "selene-sim",
    "jinja2",
    "guppylang",
    "coverage",
    "hugr-qir",
    "qirrunner",
    "pyyaml>=6.0.3",
    "typing-extensions>=4.15.0",
    "qwasm>=1.0.1",
]

[tool.uv]
required-environments = "sys_platform == 'linux' and platform_machine == 'x86_64'"

[tool.uv.sources]
qirrunner = { git = "https://github.com/CQCL/qir-runner.git", subdirectory = "pip" }
hugr-qir = { git = "https://github.com/CQCL/hugr-qir.git" }

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.14.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]  # Enable Pyflakes, pycodestyle, Isort, and Warnings
ignore = []

[tool.pyright]
include = ["scripts", "diff_testing", "main.py"]
pythonVersion = "3.12"
typeCheckingMode = "basic"  # Ch

[tool.setuptools]
packages = ["diff_testing"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
