[project]
name = "qutefuzz"
version = "1.0.0"
description = "Fuzzing framework for quantum compilers"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "conan",
    "pytket",
    "qiskit",
    "pytket-qiskit",
    "matplotlib",
    "sympy",
    "z3-solver",
    "cirq",
    "pytket-qir",
    "qnexus",
    "pennylane",
    "umap-learn",
    "selene-sim",
    "jinja2",
    "guppylang",
    "coverage",
    "hugr-qir",
    "qirrunner",
    "pyyaml>=6.0.3",
    "typing-extensions>=4.15.0",
    "qwasm>=1.0.1",
    "nanobind>=2.9",
    "pytket-cirq>=0.41.0",
    "qiskit-qasm3-import>=0.6.0",
    "ply>=3.11",
    "pytket-pennylane>=0.20.0",
    "pennylane-qiskit>=0.38.0",
    "tket>=0.12.16",
    "wisq>=0.2.7",
]

[tool.uv]
required-environments = "sys_platform == 'linux' and platform_machine == 'x86_64'"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.14.13",
    "setuptools-rust>=1.12.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]  # Enable Pyflakes, pycodestyle, Isort, and Warnings
ignore = []

[tool.pyright]
include = ["scripts", "diff_testing", "main.py"]
pythonVersion = "3.12"
typeCheckingMode = "basic"  # Ch

[tool.setuptools]
packages = ["diff_testing"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
